// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have an empty queue after clear("all") 1`] = `[]`;

exports[`Should have remove items in class queue after clear("c") 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
  },
]
`;

exports[`Should have remove items in class queue after clear("class") 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
  },
]
`;

exports[`Should not mark same item multiple times as local 1`] = `
[
  {
    "command": "stand",
    "locallyControlled": true,
    "properties": {
      "beBound": false,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "stand",
    "locallyControlled": false,
    "properties": {
      "beBound": false,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should put items at given position in queue with trackAt 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
  },
  {
    "command": "bamboozle",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
  },
]
`;

exports[`Should put prepended items first in queue 1`] = `
[
  {
    "command": "bamboozle",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
  },
]
`;

exports[`Should queue command to in-game queue when added locally and queue is full, but queue ran 1`] = `
[MockFunction] {
  "calls": [
    [
      "queue add eb!p!w!t stand",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should queue command to in-game queue when added locally and queue not full 1`] = `
[MockFunction] {
  "calls": [
    [
      "queue add eb!p!w!t stand",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should recognize own queue item on confirmation in game and mark it accordingly 1`] = `
[
  {
    "command": "stand",
    "locallyControlled": true,
    "properties": {
      "beBound": false,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should remove items at given position in queue with trackRemove 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
  },
]
`;

exports[`Should remove run command from queue (not first item) 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "boom",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should remove run command from queue 1`] = `
[
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "boom",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should remove run command from queue with different casing 1`] = `
[
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "boom",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should replace items at given position in queue with trackReplace 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "bamboozle",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
  },
]
`;

exports[`Should translate property "!b" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveBalance": false,
    },
  },
]
`;

exports[`Should translate property "!c" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": false,
    },
  },
]
`;

exports[`Should translate property "!e" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveEq": false,
    },
  },
]
`;

exports[`Should translate property "!p" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should translate property "!s" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": false,
    },
  },
]
`;

exports[`Should translate property "!t" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
    },
  },
]
`;

exports[`Should translate property "!u" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": false,
    },
  },
]
`;

exports[`Should translate property "!w" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beBound": false,
    },
  },
]
`;

exports[`Should translate property "b" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveBalance": true,
    },
  },
]
`;

exports[`Should translate property "balance" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveBalance": true,
    },
  },
]
`;

exports[`Should translate property "c" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
  },
]
`;

exports[`Should translate property "class" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
  },
]
`;

exports[`Should translate property "e" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveEq": true,
    },
  },
]
`;

exports[`Should translate property "equilibrium" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveEq": true,
    },
  },
]
`;

exports[`Should translate property "free" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should translate property "freestand" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should translate property "frl" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {},
  },
]
`;

exports[`Should translate property "full" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should translate property "p" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveParalysis": true,
    },
  },
]
`;

exports[`Should translate property "paralysis" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveParalysis": false,
    },
  },
]
`;

exports[`Should translate property "s" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
  },
]
`;

exports[`Should translate property "stun" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
    },
  },
]
`;

exports[`Should translate property "t" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": true,
    },
  },
]
`;

exports[`Should translate property "u" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
    },
  },
]
`;

exports[`Should translate property "unbound" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beBound": false,
    },
  },
]
`;

exports[`Should translate property "w" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beBound": true,
    },
  },
]
`;

exports[`Workaround for in-game bug #17807 1`] = `[]`;
